<resources>
    <string name="app_name">SimulandoChamada</string>
    <string name="txt_titulo">APP yThigs</string>
    <string name="edit_email">E-mail</string>
    <string name="edit_senha">Senha</string>
    <string name="btn_login">Login</string>
    <string name="txt_register">registrar</string>
    <string name="texto">Registrando</string>
    <string name="btn_registrar">Registrar</string>
    <string name="btn_ligar">Ligar</string>
    <string name="btn_1">1</string>
    <string name="btn_2">2</string>
    <string name="btn_3">3</string>
    <string name="btn_4">4</string>
    <string name="btn_5">5</string>
    <string name="btn_6">6</string>
    <string name="btn_7">7</string>
    <string name="btn_8">8</string>
    <string name="btn_9">9</string>
    <string name="btn_0">0</string>
    <string name="btn_asterisco">*</string>
    <string name="btn_jogovelha">#</string>


</resources>
